--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
   "name": "whatsapp-ai-bot",
   "version": "1.0.0",
-  "description": "WhatsApp bot with product list and Gemini AI integration",
+  "description": "WhatsApp AI Bot on Vercel",
   "main": "api/index.js",
   "scripts": {
-    "start": "node api/index.js",
-    "dev": "node api/index.js"
+    "start": "node api/index.js"
   },
-  "keywords": [
-    "whatsapp",
-    "bot",
-    "ai",
-    "gemini",
-    "ecommerce"
-  ],
-  "author": "Farid Siddiq",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.11.0",
-    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "qrcode-terminal": "^0.12.0",
+    "firebase-admin": "^12.2.0",
+    "node-telegram-bot-api": "^0.66.0",
+    "qrcode": "^1.5.3",
     "whatsapp-web.js": "^1.23.0"
   }
 }
